--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.17.2
 blinker==1.9.0
 click==8.3.1
+dotenv==0.9.9
 Flask==3.1.2
 Flask-JWT-Extended==4.7.1
 Flask-Migrate==4.1.0
@@ -16,6 +17,7 @@ PyJWT==2.10.1
 PyMySQL==1.1.2
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
 pytz==2025.2
 six==1.17.0
 SQLAlchemy==2.0.45
