--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ click==8.3.1
 dotenv==0.9.9
 Flask==3.1.2
 Flask-JWT-Extended==4.7.1
+Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.3.0
