--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,10 +3,12 @@ blinker==1.9.0
 click==8.3.1
 dotenv==0.9.9
 Flask==3.1.2
+flask-cors==6.0.2
 Flask-JWT-Extended==4.7.1
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==5.21.0
 greenlet==3.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
