--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
 alembic==1.17.2
 blinker==1.9.0
+cffi==2.0.0
 click==8.3.1
+cryptography==46.0.3
 dotenv==0.9.9
+et_xmlfile==2.0.0
 Flask==3.1.2
 flask-cors==6.0.2
 Flask-JWT-Extended==4.7.1
@@ -15,9 +18,12 @@ Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.3
 numpy==2.4.0
+openpyxl==3.1.5
 pandas==2.3.3
+pycparser==3.0
 PyJWT==2.10.1
 PyMySQL==1.1.2
+pypdf==6.6.0
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
@@ -27,3 +33,4 @@ SQLAlchemy==2.0.45
 typing_extensions==4.15.0
 tzdata==2025.3
 Werkzeug==3.1.4
+xlsxwriter==3.2.9
