--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.17.2
 blinker==1.9.0
+cffi==2.0.0
 click==8.3.1
+cryptography==46.0.3
 dotenv==0.9.9
 et_xmlfile==2.0.0
 Flask==3.1.2
@@ -11,17 +13,23 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 flask-swagger-ui==5.21.0
 greenlet==3.3.0
+iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==3.0.3
 numpy==2.4.0
 openpyxl==3.1.5
+packaging==26.0
 pandas==2.3.3
+pluggy==1.6.0
+pycparser==3.0
+Pygments==2.19.2
 PyJWT==2.10.1
 PyMySQL==1.1.2
 pypdf==6.6.0
 PyPDF2==3.0.1
+pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
